# secure-mcp-hw

./: .gitignore  CLAUDE.md  README.md  client.py  oauth.py  pyproject.toml  pytest.ini  run_tests.py  test_client.py  weather.py
